force-app/main/default/objects/Intapp_Pricing__c/fields/FS_Sales__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the OP4I FS Sales Price book name FS Sales</description>
    <label>FS Sales</label>
    <type>Checkbox</type>
</CustomField>