force-app/main/default/objects/Intapp_Pricing__c/fields/Platinum_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Pricing__c</fullName>
    <description>Field used to hold pricing including support</description>
    <label>Platinum Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>