force-app/main/default/objects/Intapp_Pricing__c/fields/Premium_price__c.field-meta.xml
<CustomField>
    <fullName>Premium_price__c</fullName>
    <label>Premium price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>