force-app/main/default/objects/Intapp_Pricing__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Intapp Pricings</relationshipLabel>
    <relationshipName>Intapp_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>