force-app/main/default/objects/Intapp_Pricing__c/fields/Price_book_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_book_Code__c</fullName>
    <formula>IF(
Price_Book__r.Name==&apos;Standard Price Book&apos;, &apos;Standard&apos;,
LEFT(Price_Book__r.Name, 4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price book Code</label>
    <type>Text</type>
</CustomField>