force-app/main/default/objects/Intapp_Pricing__c/fields/PS_Ops_Only__c.field-meta.xml
<CustomField>
    <fullName>PS_Ops_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed will hold the OP4I PS Ops Only Price book name PS Ops Only</description>
    <label>PS Ops Only</label>
    <type>Checkbox</type>
</CustomField>