force-app/main/default/objects/Intapp_Pricing__c/fields/Repstor__c.field-meta.xml
<CustomField>
    <fullName>Repstor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the OP4I Repstor Price book name - Repstor</description>
    <label>Repstor</label>
    <type>Checkbox</type>
</CustomField>