force-app/main/default/objects/Intapp_Pricing__c/listViews/All_Pricings.listView-meta.xml
<ListView>
    <fullName>All_Pricings</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Premium_price__c</columns>
    <columns>Price__c</columns>
    <columns>Meter_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Tier__c</columns>
    <columns>Tiered_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>contains</operation>
        <value>01937</value>
    </filters>
    <filters>
        <field>Meter_Type__c</field>
        <operation>equals</operation>
        <value>Lawyers,Fee Earners</value>
    </filters>
    <label>All Pricings</label>
    <language>en_US</language>
</ListView>