force-app/main/default/objects/Intapp_Pricing__c/listViews/FY23_Pricings.listView-meta.xml
<ListView>
    <fullName>FY23_Pricings</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Premium_price__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Price__c</columns>
    <columns>Tiered_Pricing__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Book__c</field>
        <operation>contains</operation>
        <value>23</value>
    </filters>
    <label>FY23 Pricings</label>
    <language>en_US</language>
</ListView>